test/force-app/main/default/objects/EPC_Component__c/EPC_Component__c.object-meta.xml
<CustomObject>
    <description>Houses the CRU and Design &amp; AEP associated with a configuration (GM, RT, CPY).</description>
    <label>EPC Component</label>
    <nameField>
        <label>EPC Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EPC Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>