test/force-app/main/default/objects/EPC_Component__c/fields/AEP_kWh_year__c.field-meta.xml
<CustomField>
    <fullName>AEP_kWh_year__c</fullName>
    <label>AEP (kWh/year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>