test/force-app/main/default/objects/EPC_Component__c/fields/AEP_Link__c.field-meta.xml
<CustomField>
    <fullName>AEP_Link__c</fullName>
    <label>AEP Link</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>