test/force-app/main/default/objects/EPC_Component__c/fields/CRU__c.field-meta.xml
<CustomField>
    <fullName>CRU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRU</label>
    <referenceTo>NEW_Cost_Assumption_Set__c</referenceTo>
    <relationshipLabel>EPC Components</relationshipLabel>
    <relationshipName>EPC_Components</relationshipName>
    <type>Lookup</type>
</CustomField>