test/force-app/main/default/objects/EPC_Component__c/fields/Design_AEP__c.field-meta.xml
<CustomField>
    <fullName>Design_AEP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Design &amp; AEP</label>
    <referenceTo>Design_AEP__c</referenceTo>
    <relationshipLabel>EPC Components</relationshipLabel>
    <relationshipName>EPC_Components</relationshipName>
    <type>Lookup</type>
</CustomField>