test/force-app/main/default/objects/EPC_Component__c/fields/Direct_Labor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Labor__c</fullName>
    <label>Direct Labor ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>