test/force-app/main/default/objects/EPC_Component__c/fields/Direct_Labor_calc__c.field-meta.xml
<CustomField>
    <fullName>Direct_Labor_calc__c</fullName>
    <formula>CRU__r.Direct_Labor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Labor calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>