test/force-app/main/default/objects/EPC_Component__c/fields/Direct_Material__c.field-meta.xml
<CustomField>
    <fullName>Direct_Material__c</fullName>
    <label>Direct Material ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>