test/force-app/main/default/objects/EPC_Component__c/fields/Direct_Material_calc__c.field-meta.xml
<CustomField>
    <fullName>Direct_Material_calc__c</fullName>
    <formula>CRU__r.Direct_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Material calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>