test/force-app/main/default/objects/EPC_Component__c/fields/Drawings_Link__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Link__c</fullName>
    <label>Drawings Link</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>