test/force-app/main/default/objects/EPC_Component__c/fields/EPC_Cost__c.field-meta.xml
<CustomField>
    <fullName>EPC_Cost__c</fullName>
    <label>EPC Cost ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>