test/force-app/main/default/objects/EPC_Component__c/fields/EPC_Cost_W__c.field-meta.xml
<CustomField>
    <fullName>EPC_Cost_W__c</fullName>
    <formula>EPC_Cost__c / (1000 *  System_Size_kW_DC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPC Cost ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>