test/force-app/main/default/objects/EPC_Component__c/fields/Indirect_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Labor_Cost__c</fullName>
    <formula>CRU__r.Indirect_Labor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirect Labor calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>