test/force-app/main/default/objects/EPC_Component__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <referenceTo>Scenario__c</referenceTo>
    <relationshipLabel>EPC Components</relationshipLabel>
    <relationshipName>EPC_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>