test/force-app/main/default/objects/EPC_Component__c/fields/Specific_Yield_kWh_kWp__c.field-meta.xml
<CustomField>
    <fullName>Specific_Yield_kWh_kWp__c</fullName>
    <formula>AEP_kWh_year__c / System_Size_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specific Yield (kWh/kWp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>