test/force-app/main/default/objects/EPC_Component__c/fields/System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_DC__c</fullName>
    <label>System Size (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>