test/force-app/main/default/objects/EPC_Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RT</fullName>
            </value>
            <value>
                <fullName>CPY</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>