test/force-app/main/default/objects/EPC_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Design_AEP__c</columns>
    <columns>CRU__c</columns>
    <columns>EPC_Cost__c</columns>
    <columns>System_Size_kW_DC__c</columns>
    <columns>System_Size_kW_AC__c</columns>
    <columns>AEP_kWh_year__c</columns>
    <columns>AEP_Link__c</columns>
    <columns>Drawings_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>